--- a/src/GameKit.Unity/Assets/GameKit/GameKit.Common/package.json
+++ b/src/GameKit.Unity/Assets/GameKit/GameKit.Common/package.json
@@ -1,5 +1,5 @@
 ﻿{
-    "name": "com.aaron.game-kit",
+    "name": "com.aaron.game-kit.common",
     "displayName": "GameKit",
     "version": "0.1.0",
     "description": "(Api -> Core <- Infrastructure) architecture for support kit",
