--- a/src/GameKit.Unity/Assets/GameKit/GameKit.Common/package.json
+++ b/src/GameKit.Unity/Assets/GameKit/GameKit.Common/package.json
@@ -1,6 +1,6 @@
 ﻿{
     "name": "com.aaron.game-kit.common",
-    "displayName": "GameKit",
+    "displayName": "GameKit.Common",
     "version": "0.1.0",
     "description": "(Api -> Core <- Infrastructure) architecture for support kit",
     "unity": "2021.3"
