feat: SceneNavigation 샘플 업데이트

--- a/src/GameKit.Unity/Assets/GameKit.Assets/Runtime/GameKit.Assets.asmdef
+++ b/src/GameKit.Unity/Assets/GameKit.Assets/Runtime/GameKit.Assets.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Unity.Addressables",
         "Unity.ResourceManager",
-        "UniTask"
+        "UniTask",
+        "GameKit.Common"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
