--- a/src/GameKit.Unity/Assets/Samples/Navigation/SceneOverview/Scripts/Samples.Navigation.SceneOverview.asmdef
+++ b/src/GameKit.Unity/Assets/Samples/Navigation/SceneOverview/Scripts/Samples.Navigation.SceneOverview.asmdef
@@ -9,7 +9,8 @@
     "UniTask",
     "Unity.Addressables",
     "Unity.ResourceManager",
-    "LitMotion"
+    "LitMotion",
+    "GameKit.SceneLauncher.VContainer"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
