feat(assets): 유즈케이스 기반 Addressable 도구 집합 구조로 전환
주요 변경사항:
  - AssetManager를 AddressableOperations로 변경 (인스턴스 기반)
  - CatalogResult 전용 타입 추가로 긴 제네릭 타입 간소화
  - CatalogErrorCodes 정적 클래스로 구조화된 에러 코드 관리
  - 중앙 집중형 Manager 패턴에서 유즈케이스별 독립 도구로 설계 전환
  - CLAUDE.md에 Assets 모듈 아키텍처 문서화

--- a/src/GameKit.Unity/Assets/Samples/Navigation/SceneOverview/Scripts/Samples.Navigation.SceneOverview.asmdef
+++ b/src/GameKit.Unity/Assets/Samples/Navigation/SceneOverview/Scripts/Samples.Navigation.SceneOverview.asmdef
@@ -1,24 +1,25 @@
 {
-  "name": "Samples.Navigation.SceneOverview",
-  "rootNamespace": "",
-  "references": [
-    "GameKit.Navigation",
-    "GameKit.Navigation.VContainer",
-    "VContainer",
-    "VitalRouter",
-    "UniTask",
-    "Unity.Addressables",
-    "Unity.ResourceManager",
-    "LitMotion",
-    "GameKit.SceneLauncher.VContainer"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Samples.Navigation.SceneOverview",
+    "rootNamespace": "",
+    "references": [
+        "GameKit.Navigation",
+        "GameKit.Navigation.VContainer",
+        "VContainer",
+        "VitalRouter",
+        "UniTask",
+        "Unity.Addressables",
+        "Unity.ResourceManager",
+        "LitMotion",
+        "GameKit.SceneLauncher.VContainer",
+        "GameKit.Assets"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
