feat(navigation): SceneNavigation도 VitalRouter기반으로 변경

--- a/src/GameKit.Unity/Assets/Samples/Navigation/SceneOverview/Scripts/Samples.Navigation.SceneOverview.asmdef
+++ b/src/GameKit.Unity/Assets/Samples/Navigation/SceneOverview/Scripts/Samples.Navigation.SceneOverview.asmdef
@@ -11,7 +11,8 @@
         "Unity.ResourceManager",
         "LitMotion",
         "GameKit.SceneLauncher.VContainer",
-        "GameKit.Assets"
+        "GameKit.Assets",
+        "GameKit.Common"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
