feat: GameKit.Logger 모듈 추가 및 Navigation 시스템 개선
- GameKit.Logger 모듈 추가: ILogger 인터페이스 및 VContainer 통합
- DownloadManifest 기능 추가로 에셋 다운로드 관리 개선
- ToScenePlanBuilder 제거하여 Scene Navigation 아키텍처 단순화
- IntroScene UI 문서(UXML/USS) 추가 및 샘플 개선
- 프로젝트 의존성 및 설정 업데이트

--- a/src/GameKit.Unity/Assets/GameKit.Logger/VContainer/GameKit.Logger.VContainer.asmdef
+++ b/src/GameKit.Unity/Assets/GameKit.Logger/VContainer/GameKit.Logger.VContainer.asmdef
@@ -1,14 +1,9 @@
 {
-  "name": "GameKit.Navigation",
+  "name": "GameKit.Logger.VContainer",
   "rootNamespace": "",
   "references": [
-    "GameKit.Common",
-    "GameKit.Assets",
-    "GameKit.Logger",
-    "Unity.Addressables",
-    "Unity.ResourceManager",
-    "UniTask",
-    "VitalRouter"
+    "VContainer",
+    "GameKit.Logger"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
@@ -16,8 +11,15 @@
   "overrideReferences": false,
   "precompiledReferences": [],
   "autoReferenced": true,
-  "defineConstraints": [],
+  "defineConstraints": [
+    "USE_VCONTAINER"
+  ],
   "versionDefines": [
+    {
+      "name": "jp.hadashikick.vcontainer",
+      "expression": "",
+      "define": "USE_VCONTAINER"
+    }
   ],
   "noEngineReferences": false
 }
