--- a/src/GameKit.Unity/Assets/GameKit.Navigation/VContainer/GameKit.Navigation.VContainer.asmdef
+++ b/src/GameKit.Unity/Assets/GameKit.Navigation/VContainer/GameKit.Navigation.VContainer.asmdef
@@ -8,7 +8,8 @@
         "UniTask",
         "GameKit.Assets",
         "Unity.Addressables",
-        "Unity.ResourceManager"
+        "Unity.ResourceManager",
+        "GameKit.Logger.VContainer"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
