feat(navigation): 원격리소스 초기화 시점 지연가능하도록 개선

--- a/src/GameKit.Unity/.gitignore
+++ b/src/GameKit.Unity/.gitignore
@@ -201,3 +201,5 @@ sysinfo.txt
 /ServerData
 
 !/Assets/**/*.unitypackage
+/Assets/AddressableAssetsData/link.xml
+/Assets/AddressableAssetsData/link.xml.meta
