fix(logger): LoggerBuilder 빌드 함수 internal로 수정

--- a/src/GameKit.Unity/.gitignore
+++ b/src/GameKit.Unity/.gitignore
@@ -201,5 +201,5 @@ sysinfo.txt
 /ServerData
 
 !/Assets/**/*.unitypackage
-/Assets/AddressableAssetsData/link.xml
-/Assets/AddressableAssetsData/link.xml.meta
+/Assets/AddressableAssetsData/**/link.xml
+/Assets/AddressableAssetsData/**/link.xml.meta
