docs(claude): ZLogger 직접 사용 방식으로 로깅 시스템 업데이트
- GameKit.Logger 모듈 제거, ZLogger 직접 사용으로 변경
  * USE_ZLOGGER 조건부 컴파일 정의 제거
  * 핵심 라이브러리에 ZLogger 추가
  * 에러 처리 가이드라인을 ZLogger 기반으로 수정

--- a/src/GameKit.Unity/Assets/GameKit.Navigation/Runtime/GameKit.Navigation.asmdef
+++ b/src/GameKit.Unity/Assets/GameKit.Navigation/Runtime/GameKit.Navigation.asmdef
@@ -1,23 +1,21 @@
 {
-  "name": "GameKit.Navigation",
-  "rootNamespace": "",
-  "references": [
-    "GameKit.Common",
-    "GameKit.Assets",
-    "GameKit.Logger",
-    "Unity.Addressables",
-    "Unity.ResourceManager",
-    "UniTask",
-    "VitalRouter"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [
-  ],
-  "noEngineReferences": false
+    "name": "GameKit.Navigation",
+    "rootNamespace": "",
+    "references": [
+        "GameKit.Common",
+        "GameKit.Assets",
+        "Unity.Addressables",
+        "Unity.ResourceManager",
+        "UniTask",
+        "VitalRouter"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
