--- a/src/GameKit.Unity/Assets/GameKit.Navigation/Tests/GameKit.Navigation.Tests.asmdef
+++ b/src/GameKit.Unity/Assets/GameKit.Navigation/Tests/GameKit.Navigation.Tests.asmdef
@@ -15,7 +15,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "R3.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
